# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use \App\Http\Controllers\User\AuthController; 
+use \App\Http\Controllers\User\UserController; 
 use \App\Http\Controllers\Admin\AdminLoginController as AdminAuthController;
 use \App\Http\Controllers\Admin\AccessCodeController; 
 
@@ -10,13 +11,11 @@ Route::prefix('v1')->group( function(){
     
     Route::prefix('/user')->group( function() {
         Route::post('/login',[AuthController::class, 'login'])->name('login');
-        //Route::post('/signup', [UserAuthController::class, 'create'])->name('user.sign-up');
+        Route::post('/validate-code', [AccessCodeController::class, 'validateCode']);
+        Route::post('/complete-signup', [UserController::class, 'completeSignup']);
         
         Route::middleware('auth:api')->group(function () {
-            Route::post('/generate-code', [AccessCodeController::class, 'generateCode']);
-            Route::get('/access-codes', [AccessCodeController::class, 'index']);
-            Route::patch('/access-codes/{id}/status"', [AccessCodeController::class, 'updateStatus']);
-            //Route::get('/logout', [UserAuthController::class, 'logout']); 
+            Route::get('/logout', [AuthController::class, 'logout']); 
         });
     });
 
@@ -27,7 +26,10 @@ Route::prefix('v1')->group( function(){
         // Route::post('/admin-reset-password', [AdminAuthController::class, 'resetPassword']);
         Route::middleware('auth:api')->group( function ()
         {
-            Route::get('/admin-logout', [AdminAuthController::class, 'logout']);
+            Route::post('/generate-code', [AccessCodeController::class, 'generateCode']);
+            Route::get('/access-codes', [AccessCodeController::class, 'index']);
+            Route::patch('/access-codes/{id}/status"', [AccessCodeController::class, 'updateStatus']);
+            Route::get('/logout', [AdminAuthController::class, 'logout']);
         });
     });
 
